[gd_scene load_steps=15 format=2]

[ext_resource path="res://main/art/lift/liftkinni.png" type="Texture" id=1]
[ext_resource path="res://main/art/lift/liftavaneb2.png" type="Texture" id=2]
[ext_resource path="res://main/art/lift/liftavaneb5.png" type="Texture" id=3]
[ext_resource path="res://main/art/lift/liftavaneb4.png" type="Texture" id=4]
[ext_resource path="res://main/art/lift/liftavaneb7.png" type="Texture" id=5]
[ext_resource path="res://main/art/lift/liftavaneb6.png" type="Texture" id=6]
[ext_resource path="res://main/art/lift/liftavaneb3.png" type="Texture" id=7]
[ext_resource path="res://main/art/lift/liftavaneb8.png" type="Texture" id=8]
[ext_resource path="res://main/art/lift/liftavaneb1.png" type="Texture" id=9]
[ext_resource path="res://main/Elements/Lift.gd" type="Script" id=10]
[ext_resource path="res://sounds/elevator ding.mp3" type="AudioStream" id=11]
[ext_resource path="res://sounds/win_explosion.mp3" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 1 ) ],
"loop": false,
"name": "closing",
"speed": 18.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": false,
"name": "opening",
"speed": 18.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 40 )

[node name="Lift" type="Area2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "closed"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MoveTimeout" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.975
pitch_scale = 0.7

[node name="explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 5.5

[connection signal="body_entered" from="." to="." method="_on_Lift_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Lift_body_exited"]
[connection signal="timeout" from="MoveTimeout" to="." method="_on_MoveTimeout_timeout"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
